# rust-ddd-sample

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml  scripts  test.http
.docker/: docker-compose.yml
migrations/2022-09-27-144340_create_posts/: up.sql
migrations/2022-09-28-030630_create_users/: up.sql
migrations/2022-09-29-064833_create_tasks/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/modules/: mod.rs  user.rs
src/modules/common/: api_error.rs  date.rs  mod.rs  pagination.rs
src/modules/diesel/: mod.rs  tasks.rs  user.rs  util.rs
src/modules/task/domain/: mod.rs  task.rs  task_id.rs  tasks_repository.rs
src/modules/task/infra/: mod.rs  postgres_tasks_repository.rs  task_converter.rs
src/modules/task/presentation/: create_task.rs  mod.rs
src/modules/task/usecase/: create_task_usecase.rs  mod.rs  usecase_error.rs
src/modules/user/: mod.rs
src/modules/user/domain/: domain_error.rs  mail_address_unique_checker.rs  mod.rs  user.rs  user_id.rs  user_name.rs  users_repository.rs
src/modules/user/infra/: mod.rs  postgres_users_repository.rs  user_converter.rs
src/modules/user/infrastructure/: mod.rs  postgres_users_repository.rs
src/scenarios/: create_task_scenario.rs  create_user_and_task_scenario.rs  create_user_scenario.rs  delete_user_scenario.rs  find_all_users_scenario.rs  find_one_user_scenario.rs  health_check_scenario.rs  mod.rs  request_context.rs  update_user_scenario.rs
tests/: users_test.rs
tests/common/: byte.rs  error_response.rs  mod.rs
(+18 files in other folders)
